--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Js practice</title>
 </head>
 <body>
-    <h1>Js practice</h1>
+    <h1 class="introtext">Js practice</h1>
 </body>
 </html>
