--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         button:hover {
             background-color: #218838;
         }
+
+        
     </style>
     <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -137,5 +139,8 @@
     </tr>
   </tbody>
 </table>
+
+<label for="customRange1" class="form-label">Example range</label>
+<input type="range" class="form-range" id="customRange1">
 </body>
 </html>
