--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
     </tr>
   </tbody>
 </table>
+<a href="contact.html">
+<button >contact</button></a>
 
 <label for="customRange1" class="form-label">Example range</label>
 <input type="range" class="form-range" id="customRange1">
