--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Us</title>
-  <link rel="stylesheet" href="styless3.css">
+  <link rel="stylesheet" href="styles3.css">
 </head>
 <body>
 
@@ -32,6 +32,21 @@
         <p>
           We are a passionate team dedicated to building innovative solutions and delivering the best possible experience to our users. Our mission is to bridge the gap between technology and people with creativity and professionalism.
         </p>
+        <!-- Modal -->
+<div id="modal" class="modal">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <h2>More About Us</h2>
+      <p>We believe in transforming ideas into reality through innovation, teamwork, and dedication.</p>
+      <button onclick="scrollToTop()">Scroll to Top</button>
+    </div>
+  </div>
+  
+  <!-- Dark/Light Mode Toggle -->
+  <div class="toggle-container">
+    <button id="modeToggle">Dark Mode</button>
+  </div>
+  
         <button onclick="learnMore()">Learn More</button>
       </div>
     </div>
