--- a/aboutus.html
+++ b/aboutus.html
@@ -28,6 +28,8 @@
         <img src="https://via.placeholder.com/400x300" alt="Team Image">
       </div>
       <div class="about-text">
+        <h2 id="typed" class="typing-text"></h2>
+
         <h1>Who We Are</h1>
         <p>
           We are a passionate team dedicated to building innovative solutions and delivering the best possible experience to our users. Our mission is to bridge the gap between technology and people with creativity and professionalism.
@@ -46,6 +48,8 @@
   <div class="toggle-container">
     <button id="modeToggle">Dark Mode</button>
   </div>
+  <button id="learnBtn">Learn More</button>
+
   
         <button onclick="learnMore()">Learn More</button>
       </div>
