--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,7 @@
   <section class="about-section">
     <div class="container">
       <div class="about-image">
-        <img src="https://via.placeholder.com/400x300" alt="Team Image">
+        <img src="team.jpg" alt="Team Image">
       </div>
       <div class="about-text">
         <h2 id="typed" class="typing-text"></h2>
@@ -44,22 +44,22 @@
     </div>
   </div>
   
-  <!-- Dark/Light Mode Toggle -->
-  <div class="toggle-container">
-    <button id="modeToggle">Dark Mode</button>
-  </div>
+  
   <button id="learnBtn">Learn More</button>
 
   
-        <button onclick="learnMore()">Learn More</button>
       </div>
     </div>
   </section>
 
+
   <footer>
     <p>&copy; 2025 Our Company. All rights reserved.</p>
   </footer>
-
+  <!-- Dark/Light Mode Toggle -->
+  <div class="toggle-container">
+    <button id="modeToggle">Dark Mode</button>
+  </div>
   <script src="script1.js"></script>
 </body>
 </html>
