--- a/aboutus.html
+++ b/aboutus.html
@@ -1,15 +1,12 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us</title>
-  <link rel="stylesheet" href="styles3.css">
+  <link rel="stylesheet" href="styles3.css" />
 </head>
 <body>
-
   <header>
     <nav class="navbar">
       <div class="logo">Our Company</div>
@@ -25,41 +22,84 @@
   <section class="about-section">
     <div class="container">
       <div class="about-image">
-        <img src="team.jpg" alt="Team Image">
+        <img src="team.jpg" alt="Our Team" />
       </div>
       <div class="about-text">
         <h2 id="typed" class="typing-text"></h2>
-
         <h1>Who We Are</h1>
         <p>
-          We are a passionate team dedicated to building innovative solutions and delivering the best possible experience to our users. Our mission is to bridge the gap between technology and people with creativity and professionalism.
+          We are a passionate team dedicated to building innovative solutions
+          and delivering the best possible experience to our users. Our mission
+          is to bridge the gap between technology and people with creativity
+          and professionalism.
         </p>
-        <!-- Modal -->
-<div id="modal" class="modal">
-    <div class="modal-content">
-      <span id="closeModal" class="close">&times;</span>
-      <h2>More About Us</h2>
-      <p>We believe in transforming ideas into reality through innovation, teamwork, and dedication.</p>
-      <button onclick="scrollToTop()">Scroll to Top</button>
-    </div>
-  </div>
-  
-  
-  <button id="learnBtn">Learn More</button>
-
-  
+        <button id="learnBtn">Learn More</button>
       </div>
     </div>
   </section>
 
+  <!-- Modal -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <h2>More About Us</h2>
+      <p>
+        We believe in transforming ideas into reality through innovation,
+        teamwork, and dedication.
+      </p>
+      <button onclick="scrollToTop()">Scroll to Top</button>
+    </div>
+  </div>
 
   <footer>
     <p>&copy; 2025 Our Company. All rights reserved.</p>
   </footer>
+
   <!-- Dark/Light Mode Toggle -->
   <div class="toggle-container">
     <button id="modeToggle">Dark Mode</button>
   </div>
+
   <script src="script1.js"></script>
+  <script>
+    // Typing effect
+    const text = "Innovating with passion, delivering with purpose.";
+    let index = 0;
+    const typing = () => {
+      if (index < text.length) {
+        document.getElementById("typed").innerHTML += text.charAt(index);
+        index++;
+        setTimeout(typing, 50);
+      }
+    };
+    typing();
+
+    // Modal toggle
+    document.getElementById("learnBtn").onclick = function () {
+      document.getElementById("modal").style.display = "block";
+    };
+    document.getElementById("closeModal").onclick = function () {
+      document.getElementById("modal").style.display = "none";
+    };
+    window.onclick = function (e) {
+      if (e.target == document.getElementById("modal")) {
+        document.getElementById("modal").style.display = "none";
+      }
+    };
+
+    // Scroll to top
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    }
+
+    // Dark mode toggle
+    const toggleBtn = document.getElementById("modeToggle");
+    toggleBtn.onclick = function () {
+      document.body.classList.toggle("dark-mode");
+      toggleBtn.textContent = document.body.classList.contains("dark-mode")
+        ? "Light Mode"
+        : "Dark Mode";
+    };
+  </script>
 </body>
 </html>
