--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles3.css" />
 </head>
 <body>
+
   <header>
     <nav class="navbar">
       <div class="logo">Our Company</div>
@@ -22,34 +23,31 @@
   <section class="about-section">
     <div class="container">
       <div class="about-image">
-        <img src="team.jpg" alt="Our Team" />
+        <img src="team.jpg" alt="Team Image">
       </div>
       <div class="about-text">
         <h2 id="typed" class="typing-text"></h2>
+
         <h1>Who We Are</h1>
         <p>
-          We are a passionate team dedicated to building innovative solutions
-          and delivering the best possible experience to our users. Our mission
-          is to bridge the gap between technology and people with creativity
-          and professionalism.
+          We are a passionate team dedicated to building innovative solutions and delivering the best possible experience to our users. Our mission is to bridge the gap between technology and people with creativity and professionalism.
         </p>
+
         <button id="learnBtn">Learn More</button>
+
+        <!-- Modal -->
+        <div id="modal" class="modal">
+          <div class="modal-content">
+            <span id="closeModal" class="close">&times;</span>
+            <h2>More About Us</h2>
+            <p>We believe in transforming ideas into reality through innovation, teamwork, and dedication.</p>
+            <button onclick="scrollToTop()">Scroll to Top</button>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
-
-  <!-- Modal -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <span id="closeModal" class="close">&times;</span>
-      <h2>More About Us</h2>
-      <p>
-        We believe in transforming ideas into reality through innovation,
-        teamwork, and dedication.
-      </p>
-      <button onclick="scrollToTop()">Scroll to Top</button>
-    </div>
-  </div>
 
   <footer>
     <p>&copy; 2025 Our Company. All rights reserved.</p>
@@ -60,46 +58,7 @@
     <button id="modeToggle">Dark Mode</button>
   </div>
 
+  <!-- Your JavaScript file -->
   <script src="script1.js"></script>
-  <script>
-    // Typing effect
-    const text = "Innovating with passion, delivering with purpose.";
-    let index = 0;
-    const typing = () => {
-      if (index < text.length) {
-        document.getElementById("typed").innerHTML += text.charAt(index);
-        index++;
-        setTimeout(typing, 50);
-      }
-    };
-    typing();
-
-    // Modal toggle
-    document.getElementById("learnBtn").onclick = function () {
-      document.getElementById("modal").style.display = "block";
-    };
-    document.getElementById("closeModal").onclick = function () {
-      document.getElementById("modal").style.display = "none";
-    };
-    window.onclick = function (e) {
-      if (e.target == document.getElementById("modal")) {
-        document.getElementById("modal").style.display = "none";
-      }
-    };
-
-    // Scroll to top
-    function scrollToTop() {
-      window.scrollTo({ top: 0, behavior: "smooth" });
-    }
-
-    // Dark mode toggle
-    const toggleBtn = document.getElementById("modeToggle");
-    toggleBtn.onclick = function () {
-      document.body.classList.toggle("dark-mode");
-      toggleBtn.textContent = document.body.classList.contains("dark-mode")
-        ? "Light Mode"
-        : "Dark Mode";
-    };
-  </script>
 </body>
 </html>
