--- a/index.html
+++ b/index.html
@@ -200,6 +200,12 @@
   }
 
 calculator(3,3,multiply,devide);
+function greetuser(){
+  console.log("hello user!");
+}
+
+
+setTimeout(greetuser,5000);
   
   
   </script>
