--- a/index.html
+++ b/index.html
@@ -207,6 +207,17 @@ function greetuser(){
 
 setTimeout(greetuser,5000);
   
+let count = 0;
+    function increase() {
+      count++;
+      document.getElementById('count').textContent = count;
+    }
+
+    function decrease() {
+      count--;
+      document.getElementById('count').textContent = count;
+    }
+
   
   </script>
 
