--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
     <input type="range" class="form-range" id="customRange1">
   </div>
 
+  <h2>Palindrome Checker</h2>
+  <input type="text" id="word" placeholder="Type a word">
+  <button onclick="checkPalindrome()">Check</button>
+  <p id="result"></p>
+
   <!-- Bootstrap & JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -235,6 +240,16 @@ let count = 0;
 
       document.getElementById('taskList').appendChild(li);
       document.getElementById('taskInput').value = '';
+    }
+
+
+
+
+    function checkPalindrome() {
+      const word = document.getElementById('word').value.toLowerCase();
+      const reversed = word.split('').reverse().join('');
+      const result = word === reversed ? "Yes, it's a palindrome!" : "Nope!";
+      document.getElementById('result').textContent = result;
     }
 
   
