--- a/index.html
+++ b/index.html
@@ -389,6 +389,56 @@ let count = 0;
 
     // Initial load
     renderTasks();
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    >
+    const box = document.getElementById("colorBox");
+    const startBtn = document.getElementById("startBtn");
+    const stopBtn = document.getElementById("stopBtn");
+
+    let intervalId = null;
+
+    function getRandomColor() {
+      const r = Math.floor(Math.random() * 256);
+      const g = Math.floor(Math.random() * 256);
+      const b = Math.floor(Math.random() * 256);
+      return `rgb(${r},${g},${b})`;
+    }
+
+    function startChangingColor() {
+      if (intervalId) return;
+      intervalId = setInterval(() => {
+        const newColor = getRandomColor();
+        box.style.backgroundColor = newColor;
+      }, 1000);
+      startBtn.disabled = true;
+      stopBtn.disabled = false;
+    }
+
+    function stopChangingColor() {
+      clearInterval(intervalId);
+      intervalId = null;
+      startBtn.disabled = false;
+      stopBtn.disabled = true;
+    }
+
+    startBtn.addEventListener("click", startChangingColor);
+    stopBtn.addEventListener("click", stopChangingColor);
   
   </script>
 
