--- a/index.html
+++ b/index.html
@@ -321,10 +321,15 @@ let count = 0;
 
 
 
+    let fruits = ['apple', 'banana', 'cherry'];
+
+fruits.forEach((fruit, index) => {
+  console.log(`${index + 1}: ${fruit}`);
+});
 
 
 
-    >
+    
     class Task {
       constructor(description, dueDate) {
         this.description = description;
