--- a/index.html
+++ b/index.html
@@ -456,6 +456,13 @@ fruits.forEach((fruit, index) => {
 console.log(capitalizeWords("hello world from javascript")); 
 // Output: "Hello World From Javascript"
 
+
+function getRandom(min, max) {
+  return Math.floor(Math.random() * (max - min + 1)) + min;
+}
+
+console.log(getRandom(1, 100)); // Random number between 1 and 100
+
   
   </script>
 
