--- a/index.html
+++ b/index.html
@@ -463,6 +463,14 @@ function getRandom(min, max) {
 
 console.log(getRandom(1, 100)); // Random number between 1 and 100
 
+
+
+function reverseString(str) {
+  return str.split('').reverse().join('');
+}
+
+console.log(reverseString("hello")); // Output: "olleh"
+
   
   </script>
 
